Changes between 0.1.2 and 0.2.0-git:
--------------------------------

Core
 * Support video cropping
 * Support for SDK package creation

Main Application:
 * Fix opening MRLs and video streaming
 * Fix many crashes and warnings
 * New equalizer
 * Option for frame skip to improve performance


Changes between 0.1.1 and 0.1.2:
--------------------------------

* Relicensed libVLC jni wrapper and Java counterpart to LGPL

Audio Service:
 * Keep the service alive only when playing
 * Fix crashes

Main Application:
 * Manual selection of subtitles
 * Fix crashes and warnings
 * Add an option to adjust the deblocking filter level, resulting in
   noticeable performance improvements.

Translations:
 * Initial Icelandic, Lithuanian and Vietnamese translations
 * Updates to the Bosnian, Catalan, Chinese, Czech, Danish, Dutch,
   Galician, German, Hebrew, Hindi, Italian, Japanese, Marathi,
   Norwegian Bokmål, Polish, Portuguese, Russian, Scottish Gaelic,
   Serbian, Slovak, Spanish, Thai, Turkish, Ukrainian, French,
   and Welsh translations


Changes between 0.1.0 and 0.1.1:
--------------------------------

Core:
* Fix numerous crashes and error paths


Translations:
 * Updates to German, Italian and Galician Translations
 * New Welsh translation


Changes between 0.0.11 and 0.1.0:
---------------------------------

Core:
 * Update to libVLC 2.1.0 new log API
 * Update libVLC
 * Allow to build with x86_64 and OSX SDKs
 * Reduce memory usage

Main Application:
 * Warn user if playback of a deleted item starts
 * New dialog for speed/sleep/jump
 * New control from Notifications
 * Fix multiple important crashes
 * Fix some subtitles selections
 * Fix some infinite thumbnail retries
 * Fix issues where a media would not start

libVLC:
 * split libVLC classes to their own package: org.videolan.libvlc

Translations:
 * Update of Basque, Croatian


Changes between 0.0.10 and 0.0.11:
----------------------------------
Main Application:
 * Numerous fixes for recurrent crashes