@@ -9,7 +9,8 @@ Main Application:
  * Fix opening MRLs and video streaming
  * Fix many crashes and warnings
  * New equalizer
- * Option for frame skip to improve performance
+ * Add an option for frame skip to improve performance
+ * Add an option to set network caching
 
 
 Changes between 0.1.1 and 0.1.2:
